fix seat gaps

--- a/css/main2.css
+++ b/css/main2.css
@@ -106,11 +106,11 @@ button:hover, button:focus {
   width: 136px;
   height: 185px;
   margin-right: 0px;
-  margin-left: -2px;
+  margin-left: -3px;
 }
 
 .svg_seat:nth-child(8) {
-  margin-right: 480px;
+  margin-right: 500px;
 }
 
 #credits {
